<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <string name="voltage">Voltage</string>
    <string name="current">Current</string>

    <string name="enablechart">Update graph</string>
    <string name="scrolltoend">Scroll to end</string>
    <string name="cleargraph">Clear graph</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="no_suitable_paired">No suitable devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>

    <!-- Warning settings -->
    <string name="warning_setting_1">1st speed warning (km/h)</string>
    <string name="warning_setting_2">2nd speed warning (km/h)</string>
    <string name="enable_warnings">Vibration</string>
    <string name="enable_audio_warnings">Sounds</string>
    <string name="enable_audio_pitch">Pitch</string>

    <!-- Other settings -->
    <string name="lock_orientation">Lock orientation</string>
    <string name="imperial_units">Imperial units</string>
    <string name="speed_correction_factor">Speed correction factor</string>
    <string name="current_correction_factor">Current correction factor</string>

    <!-- Main menu buttons -->
    <string name="connect_button">Connect</string>
    <string name="warnings_button">Settings</string>
    <string name="graph_button">Graph view</string>
    <string name="record">Record</string>
    <string name="stop_record">Stop record</string>

    <string-array name="chart_spinner_values">
        <item>Voltage</item>
        <item>Speed</item>
        <item>Trip</item>
        <item>Current</item>
        <item>Temperature</item>
        <item>Odometer</item>
        <item>Power</item>
    </string-array>
</resources>
