<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/warning_settings"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#FF000000">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            style="@style/Widget.MediumMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warning_setting_1"
            android:layout_weight="1"
            />

        <view class="com.github.esaj.wheelemetrics.ui.misc.WarningSpeedNumberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/warning1_picker"/>

        <TextView
            style="@style/Widget.MediumMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warning_setting_2"
            android:layout_weight="1"
            />

        <view class="com.github.esaj.wheelemetrics.ui.misc.WarningSpeedNumberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/warning2_picker"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/checkbox_warnings_enabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:text="@string/enable_warnings"
            style="@style/Widget.MediumMessage"
            android:checked="true"
            android:textColor="#FF00FF00"/>

        <CheckBox
            android:id="@+id/checkbox_audio_warnings_enabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_audio_warnings"
            style="@style/Widget.MediumMessage"
            android:checked="true"
            android:textColor="#FF00FF00"/>
    </LinearLayout>
</LinearLayout>